--- a/app/src/main/res/menu/atividade.xml
+++ b/app/src/main/res/menu/atividade.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/addAtiv"
-        android:title="Nova atividade">
+    <item android:id="@+id/atividadesConcluidas"
+        android:title="Concluidas"
+        app:showAsAction="always">
     </item>
 
 </menu>
