--- a/app/src/main/res/layout/valores_duvida.xml
+++ b/app/src/main/res/layout/valores_duvida.xml
@@ -13,42 +13,49 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="181dp">
+        android:layout_height="215dp">
 
         <TextView
             android:id="@+id/textView25"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/mensagem"
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/mensagem"
             android:layout_marginTop="12dp"
             android:text="De: "
             android:textSize="18sp"
-            android:layout_alignLeft="@+id/mensagem" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView26"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/textView25"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="83dp"
             android:text="Pergunta: "
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_alignLeft="@+id/textView25" />
 
         <TextView
             android:id="@+id/deUsuario"
-            android:layout_width="112dp"
+            android:layout_width="183dp"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignTop="@+id/textView25"
+            android:layout_marginLeft="93dp"
             android:layout_marginStart="93dp"
+            android:layout_marginTop="0dp"
             android:text="TextView"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/mensagem"
             android:layout_width="301dp"
-            android:layout_height="38dp"
+            android:layout_height="70dp"
             android:layout_below="@+id/textView26"
             android:layout_centerHorizontal="true"
             android:text="TextView"
@@ -58,17 +65,19 @@
             android:id="@+id/textView31"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView25"
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/textView25"
             android:layout_marginTop="48dp"
             android:text="Para:"
             android:textSize="18sp"
-            android:layout_alignLeft="@+id/textView25" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/paraUsuario"
-            android:layout_width="113dp"
+            android:layout_width="183dp"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/deUsuario"
             android:layout_alignStart="@+id/deUsuario"
             android:layout_alignTop="@+id/textView31"
             android:text="TextView"
@@ -80,9 +89,7 @@
             android:layout_height="82dp"
             android:layout_alignParentEnd="true"
             android:layout_alignTop="@+id/textView25"
-            android:layout_marginEnd="18dp"
             app:srcCompat="@android:drawable/ic_menu_help"
-            android:layout_marginRight="18dp"
             android:layout_alignParentRight="true" />
 
         <TextView
