--- a/app/src/main/res/layout/valores_tarefa.xml
+++ b/app/src/main/res/layout/valores_tarefa.xml
@@ -72,11 +72,12 @@
         <TextView
             android:id="@+id/campoTitulo"
             android:layout_width="243dp"
-            android:layout_height="35dp"
+            android:layout_height="45dp"
             android:layout_alignBottom="@+id/imageView2"
+            android:layout_alignLeft="@+id/textView27"
             android:layout_alignStart="@+id/textView27"
-            android:text="TextView"
-            android:layout_alignLeft="@+id/textView27" />
+            android:layout_marginBottom="-10dp"
+            android:text="TextView" />
 
         <Space
             android:layout_width="361dp"
