--- a/app/src/main/res/layout/valores_usuario.xml
+++ b/app/src/main/res/layout/valores_usuario.xml
@@ -55,21 +55,21 @@
 
         <TextView
             android:id="@+id/valorNome"
-            android:layout_width="wrap_content"
+            android:layout_width="251dp"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView42"
             android:layout_alignStart="@+id/textView42"
             android:layout_below="@+id/textView42"
-            android:text="TextView"
-            android:layout_alignLeft="@+id/textView42" />
+            android:text="TextView" />
 
         <TextView
             android:id="@+id/valorNumero"
-            android:layout_width="wrap_content"
+            android:layout_width="252dp"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView42"
             android:layout_alignStart="@+id/textView42"
             android:layout_below="@+id/textView43"
-            android:text="TextView"
-            android:layout_alignLeft="@+id/textView42" />
+            android:text="TextView" />
 
         <TextView
             android:id="@+id/textView54"
